# my-ros2-program

install/: local_setup.sh  setup.sh
install/my_cpp_pkg/share/my_cpp_pkg/: package.sh
install/my_py_pkg/share/my_py_pkg/: package.sh  package.xml
log/: latest_build
my_cpp_pkg/: CMakeLists.txt
my_cpp_pkg/src/: my_first_node.cpp
my_py_pkg/: package.xml  setup.py
my_py_pkg/my_py_pkg/: my_first_node.py  robot_news_station.py  smartphone.py
my_py_pkg/my_py_pkg/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
my_py_pkg/my_py_pkg/log/: latest_build
